--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: Build step
         env:
+          ENV: ${{ secrets.ENV }}
           DB_URI: ${{ secrets.DB_URI }}
           DB_NAME: ${{ secrets.DB_NAME }}
+          DB_BACKUP_NAME: ${{ secrets.DB_BACKUP_NAME }}
           UPLOAD_API_KEY: ${{ secrets.UPLOAD_API_KEY }}
         run: "deno task build" # 📝 Update the build command(s) if necessary
 
