--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
 name: Deploy
 on:
   push:
-    branches: [main]
+    branches: [main, develop]
   pull_request:
-    branches: main
+    branches: [main, develop]
 
 jobs:
   deploy:
