feat: add toast component

--- a/deno.json
+++ b/deno.json
@@ -22,7 +22,8 @@
     "$std/": "https://deno.land/std@0.211.0/",
     "tailwindcss": "npm:tailwindcss@3.4.1",
     "tailwindcss/": "npm:/tailwindcss@3.4.1/",
-    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js"
+    "tailwindcss/plugin": "npm:/tailwindcss@3.4.1/plugin.js",
+    "toastify": "https://cdn.esm.sh/toastify-js@1.11.0"
   },
   "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" }
 }
