add success toast

--- a/.env.sample
+++ b/.env.sample
@@ -3,5 +3,5 @@ DB_URI=mongodb://127.0.0.1:27017
 DB_NAME=palestirnative
 
 # Upload
-UPLOAD_API_KEY=<upload_care_api_key>
+UPLOAD_API_KEY=da13fc8e7426e09f03bb
 
